Fix the navbar alignment

--- a/src/assets/css/nav_bar.css
+++ b/src/assets/css/nav_bar.css
@@ -20,9 +20,14 @@
   margin-left: 5px;
 }
 
+@media screen and (min-width: 992px) {
+  .link-item {
+    margin-left: 15px;
+  } 
+}
+
 .link-item {
   color: var(--dark-color);
-  margin-left: 15px;
 }
 
 .navbar-toggler {
